--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/cinfo"
-            android:icon="@drawable/ic_map_black_24dp"
+            android:icon="@drawable/ic_info_outline_black_24dp"
             android:title="Campus Info" />
         <item
             android:id="@+id/campusMap"
@@ -37,13 +37,9 @@
                 android:icon="@drawable/ic_account_box_black_24dp"
                 android:title="SWD Account" />
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:id="@+id/signIn"
+                android:icon="@drawable/ic_save_black_24dp"
+                android:title="Sign-In" />
         </menu>
     </item>
 
