--- a/app/src/main/res/layout-land/activity_timetable_view.xml
+++ b/app/src/main/res/layout-land/activity_timetable_view.xml
@@ -1,39 +1,31 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
-android:fillViewport="false">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:fillViewport="false">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="-3dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layoutAnimation="@android:anim/anticipate_overshoot_interpolator"
-                    android:nestedScrollingEnabled="false"
-                    android:orientation="vertical"
-                    android:visibility="visible">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
 
                     <GridLayout
                         android:id="@+id/timetableDaysList"
-                        android:layout_width="wrap_content"
-                        android:layout_height="588dp"
+                        android:layout_width="722dp"
+                        android:layout_height="600dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
@@ -43,7 +35,7 @@ android:fillViewport="false">
 
                         <LinearLayout
                             android:id="@+id/timingsList"
-                            android:layout_width="57dp"
+                            android:layout_width="126dp"
                             android:layout_height="match_parent"
                             android:layout_column="0"
                             android:background="#3C9AE2"
@@ -101,7 +93,7 @@ android:fillViewport="false">
                             <TextView
                                 android:id="@+id/timings_5"
                                 android:layout_width="match_parent"
-                                android:layout_height="44dp"
+                                android:layout_height="50dp"
                                 android:layout_marginTop="10dp"
                                 android:gravity="center"
                                 android:text="@string/timing5"
@@ -151,7 +143,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="101dp"
                             android:layout_height="match_parent"
                             android:layout_column="1"
                             android:background="@drawable/border_bg"
@@ -251,7 +243,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="106dp"
                             android:layout_height="match_parent"
                             android:layout_column="2"
                             android:background="@drawable/border_bg"
@@ -351,7 +343,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="99dp"
                             android:layout_height="match_parent"
                             android:layout_column="3"
                             android:background="@drawable/border_bg"
@@ -451,7 +443,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="100dp"
                             android:layout_height="match_parent"
                             android:layout_column="4"
                             android:background="@drawable/border_bg"
@@ -551,7 +543,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="98dp"
                             android:layout_height="match_parent"
                             android:layout_column="5"
                             android:background="@drawable/border_bg"
@@ -651,7 +643,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="98dp"
                             android:layout_height="match_parent"
                             android:layout_column="6"
                             android:background="@drawable/border_bg"
@@ -753,10 +745,7 @@ android:fillViewport="false">
                     </GridLayout>
                 </LinearLayout>
             </ScrollView>
-
         </LinearLayout>
     </HorizontalScrollView>
 
 </RelativeLayout>
-
-
