--- a/app/src/main/res/layout/activity_timetable_view.xml
+++ b/app/src/main/res/layout/activity_timetable_view.xml
@@ -1,39 +1,31 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
-android:fillViewport="false">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:fillViewport="false">
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="-3dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layoutAnimation="@android:anim/anticipate_overshoot_interpolator"
-                    android:nestedScrollingEnabled="false"
-                    android:orientation="vertical"
-                    android:visibility="visible">
+                    android:orientation="vertical" >
 
                     <GridLayout
                         android:id="@+id/timetableDaysList"
-                        android:layout_width="wrap_content"
-                        android:layout_height="588dp"
+                        android:layout_width="406dp"
+                        android:layout_height="600dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
@@ -101,7 +93,7 @@ android:fillViewport="false">
                             <TextView
                                 android:id="@+id/timings_5"
                                 android:layout_width="match_parent"
-                                android:layout_height="44dp"
+                                android:layout_height="50dp"
                                 android:layout_marginTop="10dp"
                                 android:gravity="center"
                                 android:text="@string/timing5"
@@ -651,7 +643,7 @@ android:fillViewport="false">
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="57dp"
+                            android:layout_width="55dp"
                             android:layout_height="match_parent"
                             android:layout_column="6"
                             android:background="@drawable/border_bg"
@@ -753,10 +745,7 @@ android:fillViewport="false">
                     </GridLayout>
                 </LinearLayout>
             </ScrollView>
-
         </LinearLayout>
     </HorizontalScrollView>
 
 </RelativeLayout>
-
-
