--- a/app/src/main/res/layout/activity_clubdep.xml
+++ b/app/src/main/res/layout/activity_clubdep.xml
@@ -26,25 +26,25 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/Bdep"
             android:layout_width="match_parent"
             android:layout_height="68dp"
             android:layout_marginTop="64dp"
             android:layout_marginBottom="105dp"
-            android:text="Button"
+            android:text="Departments"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/Bclub" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/Bclub"
             android:layout_width="match_parent"
             android:layout_height="71dp"
             android:layout_marginTop="423dp"
             android:layout_marginBottom="64dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button2"
+            android:text="Clubs"
+            app:layout_constraintBottom_toTopOf="@+id/Bdep"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
