--- a/app/src/main/res/drawable/buttonbg.xml
+++ b/app/src/main/res/drawable/buttonbg.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="14dp"
+        android:radius="100dp"
         />
-    <gradient
-        android:angle="45"
-        android:centerX="35%"
-        android:centerColor="#33B4FF"
-        android:startColor="#E8E8E8"
-        android:endColor="#FF0F0F"
-        android:type="linear"
+    <solid
+        android:color="#FFF5F5"
         />
     <padding
         android:left="0dp"
@@ -23,6 +18,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#878787"
+        android:color="#000000"
         />
 </shape>
