--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,9 +17,10 @@
             android:icon="@drawable/ic_local_dining_black_24dp"
             android:title="Mess Info" />
         <item
-            android:id="@+id/libInfo"
-            android:icon="@drawable/ic_library_books_black_24dp"
+            android:id="@+id/libinfo"
+            android:icon="@drawable/ic_local_dining_black_24dp"
             android:title="Library Info" />
+
         <item
 
             android:id="@+id/timeTable"
