--- a/app/src/main/res/layout/activity_timetable_view.xml
+++ b/app/src/main/res/layout/activity_timetable_view.xml
@@ -13,6 +13,16 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="18dp" />
+
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="392dp"
+                android:layout_height="wrap_content"
+                android:text="Turn On notification for Classes" />
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
