--- a/app/src/main/res/layout/fragment_messinfo.xml
+++ b/app/src/main/res/layout/fragment_messinfo.xml
@@ -23,7 +23,7 @@
         app:layout_constraintHorizontal_bias="0.296"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.388">
+        app:layout_constraintVertical_bias="0.385">
 
         <TextView
             android:id="@+id/textView7"
@@ -101,10 +101,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.869" />
+        app:layout_constraintVertical_bias="0.914" />
 
     <TextView
         android:id="@+id/textView2"
@@ -142,7 +141,7 @@
         app:layout_constraintHorizontal_bias="0.963"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4">
+        app:layout_constraintVertical_bias="0.397">
 
         <TextView
             android:id="@+id/textView14"
@@ -182,6 +181,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+
             android:background="@drawable/buttonbg"
             android:gravity="center"
             android:text="@string/timing_snacks"
@@ -209,19 +209,30 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/messInfoButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="81dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginBottom="350dp"
+
         android:clickable="true"
-        android:src="@drawable/ic_mic_black_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:focusable="true"
+        android:foregroundTint="#070505"
+        android:src="@drawable/mic"
+        android:visibility="visible"
+        app:backgroundTint="#000000"
+       
+
+        app:borderWidth="5dp"
+        app:fabCustomSize="75dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@+id/messInfoTag"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/messInfoTag"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.869"
-        app:srcCompat="@color/colorAccent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.142"
+        app:maxImageSize="50dp"
+        app:pressedTranslationZ="10dp"
+        app:rippleColor="#000000" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
