--- a/app/src/main/res/layout/activity_clubdep.xml
+++ b/app/src/main/res/layout/activity_clubdep.xml
@@ -9,16 +9,18 @@
 
     <TextView
         android:id="@+id/textView27"
-        android:layout_width="273dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="71dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginTop="87dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/buttonbg"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="This is Club and Dep.Thre are many clubs and deps to choose from."
-        android:textColor="#201F1F"
-        android:textSize="30sp"
+        android:text="This is Club and Dep.There are many clubs and deps to choose from."
+        android:textAlignment="center"
+        android:textColor="#030303"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +31,9 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-8dp"
-        android:layout_marginTop="-3dp">
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="-8dp"
+        android:textAlignment="center">
 
         <Button
             android:id="@+id/Bdep"
@@ -39,7 +42,7 @@
             android:layout_marginTop="64dp"
             android:layout_marginBottom="105dp"
             android:background="@drawable/buttonbg"
-            android:text="Departments"
+            android:text="Check out our Departments"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +55,7 @@
             android:layout_marginTop="423dp"
             android:layout_marginBottom="64dp"
             android:background="@drawable/buttonbg"
-            android:text="Clubs"
+            android:text="Check out our Clubs"
             app:layout_constraintBottom_toTopOf="@+id/Bdep"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
