--- a/app/src/main/res/layout/activity_deps.xml
+++ b/app/src/main/res/layout/activity_deps.xml
@@ -9,22 +9,23 @@
 
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="362dp"
+        android:layout_height="715dp"
+        android:layout_centerInParent="true">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
             <Space
-                android:layout_width="match_parent"
-                android:layout_height="37dp" />
+                android:layout_width="367dp"
+                android:layout_height="31dp" />
 
             <TextView
                 android:id="@+id/editText4"
-                android:layout_width="match_parent"
+                android:layout_width="342dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:fontFamily="@font/alfa_slab_one"
@@ -32,7 +33,7 @@
                 android:text="Departments"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
-                android:textSize="50sp" />
+                android:textSize="40sp" />
 
             <Space
                 android:layout_width="match_parent"
@@ -40,9 +41,9 @@
 
             <Button
                 android:id="@+id/button"
-                android:background="@drawable/buttonbg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Arts and Deco	" />
 
             <Space
@@ -50,10 +51,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text=" Department of Controlz	" />
 
             <Space
@@ -61,10 +62,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button22"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text=" Department of Firewallz" />
 
             <Space
@@ -72,10 +73,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button47"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Lights and Sounds" />
 
             <Space
@@ -83,10 +84,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button52"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Photography" />
 
             <Space
@@ -94,10 +95,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button53"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Professional Events" />
 
             <Space
@@ -105,10 +106,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button55"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text=" Department of Publicity and Public Relations" />
 
             <Space
@@ -116,21 +117,21 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button56"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Recreational Activities	" />
 
             <Space
-                android:layout_width="match_parent"
+                android:layout_width="352dp"
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button57"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Security and Hospitality	" />
 
             <Space
@@ -138,10 +139,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button58"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Sponsorship and Marketing" />
 
             <Space
@@ -149,10 +150,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button59"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Department of Technical Arts" />
 
             <Space
@@ -172,7 +173,7 @@
                 android:inputType="textPersonName"
                 android:text=" Assosiations"
                 android:textColor="#FFFFFF"
-                android:textSize="50sp" />
+                android:textSize="40sp" />
 
             <Space
                 android:layout_width="match_parent"
@@ -183,10 +184,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button60"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="ACE - Chemical" />
 
             <Space
@@ -194,10 +195,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button63"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Alchemy - Chemistry" />
 
             <Space
@@ -205,10 +206,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button64"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Axiom - Maths" />
 
             <Space
@@ -216,10 +217,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button61"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="CEA - Civil" />
 
             <Space
@@ -227,10 +228,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button62"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="CSA - Computer Science" />
 
             <Space
@@ -238,10 +239,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button65"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Eco Assoc - Economics" />
 
             <Space
@@ -249,10 +250,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button66"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="MEA - Mechanical" />
 
             <Space
@@ -260,10 +261,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button67"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Panacea - Pharmacy	" />
 
             <Space
@@ -271,10 +272,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button68"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Phoenix - ECE, EEE, ENI	" />
 
             <Space
@@ -282,10 +283,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button69"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Spectrum - Physics" />
 
             <Space
@@ -293,10 +294,10 @@
                 android:layout_height="12dp" />
 
             <Button
-                android:background="@drawable/buttonbg"
                 android:id="@+id/button70"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/buttonbg"
                 android:text="Synapsis - Biology" />
 
             <Space
