--- a/app/src/main/res/layout/fragment_cinfo.xml
+++ b/app/src/main/res/layout/fragment_cinfo.xml
@@ -82,7 +82,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/buttonbg"
-        android:text="@string/nearby_places"
+        android:text="Fests"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
